--- a/configs/env/default.yaml
+++ b/configs/env/default.yaml
@@ -10,11 +10,12 @@ seed:
 gpu:
 ngpu: 1
 mem_gb:
-workers:
+workers: 20
 
 slurm: True
 slurm_suffix: ""
-slurm_partition: morgadolab
+slurm_partition: DEADLINE
+slurm_comment: "CVPR"
 slurm_timeout: 1440
 nodelist: ""
-exclude: "euler01,euler02,euler03,euler04,euler05,euler06,euler07,euler08,euler09,euler11,euler12,euler13,euler14,euler15,euler16,euler21,euler24,euler25,euler26,euler27"
+exclude: ""
